// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/BottomBar LoggedIn 1`] = `
<div
  className="componentsbottombar-loggedin-muibottomnavigation-root-1 componentsbottombar-loggedin-makestyles-root-1"
>
  <button
    className="componentsbottombar-loggedin-muibuttonbase-root-1 componentsbottombar-loggedin-muibottomnavigationaction-root-1 componentsbottombar-loggedin-muibottomnavigationaction-selected-1"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="componentsbottombar-loggedin-muibottomnavigationaction-wrapper-1"
    >
      <svg
        className="componentsbottombar-loggedin-makestyles-icon-1"
        role="presentation"
        style={
          Object {
            "height": "1.5rem",
            "width": "1.5rem",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M23 14.5C23 12.94 21.97 11.63 20.55 11.18C20.83 10.68 21 10.11 21 9.5C21 7.94 19.97 6.63 18.55 6.18C18.83 5.68 19 5.11 19 4.5C19 2.57 17.43 1 15.5 1H8.5C6.57 1 5 2.57 5 4.5C5 5.11 5.17 5.68 5.45 6.18C4.04 6.63 3 7.94 3 9.5C3 10.11 3.17 10.68 3.45 11.18C2.04 11.63 1 12.94 1 14.5C1 15.76 1.67 16.84 2.67 17.46C2.25 18.03 2 18.74 2 19.5C2 21.43 3.57 23 5.5 23H18.5C20.43 23 22 21.43 22 19.5C22 18.74 21.75 18.03 21.33 17.46C22.33 16.84 23 15.76 23 14.5M8.5 3H15.5C16.33 3 17 3.67 17 4.5S16.33 6 15.5 6H8.5C7.67 6 7 5.33 7 4.5S7.67 3 8.5 3M6.5 8H17.5C18.33 8 19 8.67 19 9.5S18.33 11 17.5 11H6.5C5.67 11 5 10.33 5 9.5S5.67 8 6.5 8M4 19.5C4 18.67 4.67 18 5.5 18H9V21H5.5C4.67 21 4 20.33 4 19.5M18.5 21H15V18H18.5C19.33 18 20 18.67 20 19.5S19.33 21 18.5 21M19.5 16H14.82C14.4 14.84 13.3 14 12 14S9.6 14.84 9.18 16H4.5C3.67 16 3 15.33 3 14.5S3.67 13 4.5 13H19.5C20.33 13 21 13.67 21 14.5S20.33 16 19.5 16Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
      <span
        className="componentsbottombar-loggedin-muibottomnavigationaction-label-1 componentsbottombar-loggedin-makestyles-label-1 componentsbottombar-loggedin-muibottomnavigationaction-selected-1"
      >
        Home
      </span>
    </span>
  </button>
  <button
    className="componentsbottombar-loggedin-muibuttonbase-root-1 componentsbottombar-loggedin-muibottomnavigationaction-root-1 componentsbottombar-loggedin-muibottomnavigationaction-icononly-1"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="componentsbottombar-loggedin-muibottomnavigationaction-wrapper-1"
    >
      <svg
        aria-hidden={true}
        className="componentsbottombar-loggedin-muisvgicon-root-1 componentsbottombar-loggedin-makestyles-icon-1"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 10.9c-.61 0-1.1.49-1.1 1.1s.49 1.1 1.1 1.1c.61 0 1.1-.49 1.1-1.1s-.49-1.1-1.1-1.1zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm2.19 12.19L6 18l3.81-8.19L18 6l-3.81 8.19z"
        />
      </svg>
      <span
        className="componentsbottombar-loggedin-muibottomnavigationaction-label-1 componentsbottombar-loggedin-makestyles-label-1 componentsbottombar-loggedin-muibottomnavigationaction-icononly-1"
      >
        Explore
      </span>
    </span>
  </button>
  <button
    className="componentsbottombar-loggedin-muibuttonbase-root-1 componentsbottombar-loggedin-muibottomnavigationaction-root-1 componentsbottombar-loggedin-muibottomnavigationaction-icononly-1"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="componentsbottombar-loggedin-muibottomnavigationaction-wrapper-1"
    >
      <svg
        aria-hidden={true}
        className="componentsbottombar-loggedin-muisvgicon-root-1 componentsbottombar-loggedin-makestyles-icon-1"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M13.35 20.13c-.76.69-1.93.69-2.69-.01l-.11-.1C5.3 15.27 1.87 12.16 2 8.28c.06-1.7.93-3.33 2.34-4.29 2.64-1.8 5.9-.96 7.66 1.1 1.76-2.06 5.02-2.91 7.66-1.1 1.41.96 2.28 2.59 2.34 4.29.14 3.88-3.3 6.99-8.55 11.76l-.1.09z"
        />
      </svg>
      <span
        className="componentsbottombar-loggedin-muibottomnavigationaction-label-1 componentsbottombar-loggedin-makestyles-label-1 componentsbottombar-loggedin-muibottomnavigationaction-icononly-1"
      >
        Favorites
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/BottomBar LoggedOut 1`] = `
<div
  className="componentsbottombar-loggedout-muibox-root-1 componentsbottombar-loggedout-muibox-root-2 componentsbottombar-loggedout-makestyles-root-1"
>
  <button
    className="componentsbottombar-loggedout-muibuttonbase-root-1 componentsbottombar-loggedout-muibutton-root-1 componentsbottombar-loggedout-muibutton-outlined-1 componentsbottombar-loggedout-makestyles-outlined-1 componentsbottombar-loggedout-makestyles-outlined-2 componentsbottombar-loggedout-makestyles-root-2 componentsbottombar-loggedout-makestyles-button-1 componentsbottombar-loggedout-muibutton-disableelevation-1"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="componentsbottombar-loggedout-muibutton-label-1"
    >
      Log in
    </span>
  </button>
  <button
    className="componentsbottombar-loggedout-muibuttonbase-root-1 componentsbottombar-loggedout-muibutton-root-1 componentsbottombar-loggedout-muibutton-contained-1 componentsbottombar-loggedout-makestyles-contained-1 componentsbottombar-loggedout-makestyles-contained-3 componentsbottombar-loggedout-makestyles-root-2 componentsbottombar-loggedout-makestyles-button-1 componentsbottombar-loggedout-muibutton-disableelevation-1"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="componentsbottombar-loggedout-muibutton-label-1"
    >
      Sign up
    </span>
  </button>
</div>
`;
